# sycl_experiments

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  README.md  cpu_gpu_flow.cpp  divergence_cpu.cpp  divergence_gpu.cpp  gpu_copy_kernel.cpp  gpu_copy_kernel_two_side.cpp  gpu_cpu_atomics.cpp  gpu_cpu_flow.cpp  gpu_cpu_memcpy.cpp  gpu_cpu_put.cpp  gpu_cpu_put_flags.cpp  gpu_cpu_rd_wr.cpp
src/common/: ActiveMessage.c  ActiveMessage.h  LWT.c  LWT.h  Makefile  amfunctions.c  amfunctions.h  barrier.c  barrier.h  bigbuf.c  bigbuf.h  magic-instruction.h  magic_marker.h  misc.c  misc.h  movget.c  movget.h  movgetmemcpy.c  movgetmemcpy.h  movgetmemcpytest.c  movgettest.c  papiutil.c  papiutil.h  rao.h  shadowmemcpy.c  shadowmemcpy.h  wtime.c  wtime.h
src/common_includes/: SpinBarrier.h  cpu_affinity.h  mytime.h  rdtsc.h  sim_help.h
src/fft/: CMakeLists.txt  common_for_examples.hpp  fft.cpp  fft2d.cpp  fft3d.cpp  vecdes.cpp
src/gpu_comm_atomics_kernel/: CMakeLists.txt  README.md  gpu_comm_atomics_kernel.cpp
src/gpu_copy_kernel/: CMakeLists.txt  README.md  gpu_copy_kernel.cpp  gpu_copy_kernel_two_side_rd.cpp
src/group_size_imbalance/: CMakeLists.txt  README.md  select_group_size.cpp
src/mmap/: CMakeLists.txt  README.md  basic_mmap.cpp  cpu_gpu_mmap.cpp  cpu_gpu_mmap_block.cpp  gpu_cpu_mmap.cpp  gpu_cpu_mmap_block.cpp
src/perf/: CMakeLists.txt  atomicref.cpp  builtintest.cpp  doallhr3.sh  dodevicedata.sh  doflagtest.sh  dohostdata.sh  dohr2cc.sh  dohr2cp0.sh  dohr2p0p1.sh  dohr2t0t1.sh  dohr3cc.sh  dohr3cp0.sh  dohr3p0p1.sh  dohr3t0t1.sh  dommap.sh  dotest.sh  dothreads.sh  esimd_memcpy.cpp  globaltest.cpp  gpu_cpu_put_flags_lcs.cpp  helper.cpp  helperring.cpp  helperring2.cpp  helperring3.cpp  helperring3a.cpp  helperring4.cpp  host.cpp  host_mmap.cpp  igc_memcpy.cpp  mallocbug.cpp  multigpu.cpp  multigpupointers.cpp  pushpull.cpp  queuetest.cpp  ringlib.cpp  ringlib.h  ringlib2.cpp  ringlib2.h  ringlib3.cpp  (+13 more)
src/perf/graphs/: README  chart.py  simd5.py  simd_memcpy.py
src/shm_barrier/: CMakeLists.txt  README.md  shm_barrier.cpp
src/sycl_copy_engine/: CMakeLists.txt  README.md  sycl_copy_engine.cpp
src/sycl_l0_deadlock/: CMakeLists.txt  README.md  kernel.cl  sycl_l0_deadlock.cpp
src/sycl_l0_xelink/: gpu_copy_4ranks_l0.cpp  gpu_copy_4ranks_sycl.cpp  gpu_copy_kernel_l0.cpp  gpu_copy_kernel_sycl.cpp  kernel.cl  kernel.spv  run.sh
src/sycl_l0_xelink_write/: gpu_copy_4ranks_l0.cpp  gpu_copy_4ranks_sycl.cpp  kernel.cl  kernel.spv  run.sh
