
if(DIR_gpu_copy_kernel)
    add_subdirectory(gpu_copy_kernel)
elseif(DIR_group_size_imbalance)
    add_subdirectory(group_size_imbalance)
elseif(DIR_sycl_l0_deadlock)
    add_subdirectory(sycl_l0_deadlock)
elseif(DIR_gpu_comm_atomics_kernel)
    add_subdirectory(gpu_comm_atomics_kernel)
elseif(DIR_sycl_copy_engine)
    add_subdirectory(sycl_copy_engine)
else()
    add_subdirectory(gpu_copy_kernel)
    add_subdirectory(group_size_imbalance)
    add_subdirectory(sycl_l0_deadlock)
    add_subdirectory(gpu_comm_atomics_kernel)
    add_subdirectory(sycl_copy_engine)
endif()

