set(CMAKE_BUILD_TYPE Debug)
link_libraries(ze_loader)
add_compile_options(-march=sapphirerapids)
#add_compile_options(-mavx512f)   
add_compile_options(-fopenmp)  
add_compile_options(-fsycl-targets=spir64)   
#add_compile_options(-mllvm)
add_link_options(-fopenmp)  
add_link_options(-lpthread)   
add_executable(mallocbug mallocbug.cpp)
add_executable(host host.cpp)
add_executable(host_mmap host_mmap.cpp)
add_executable(pushpull pushpull.cpp)  
add_executable(vecadd vecadd.cpp)    
add_executable(atomicref atomicref.cpp)     
add_executable(simplering simplering.cpp)       
add_executable(storeflush storeflush.cpp)        
#add_executable(globaltest globaltest.cpp)         
add_executable(multigpu multigpu.cpp)          
add_executable(multigpupointers multigpupointers.cpp)          
add_executable(gpu_cpu_put_flags_lcs gpu_cpu_put_flags_lcs.cpp)
add_executable(igc_memcpy igc_memcpy.cpp)        
add_executable(simd_memcpy simd_memcpy.cpp)         
add_executable(helper helper.cpp)          
add_executable(helperring helperring.cpp)           
add_executable(helperring2 helperring2.cpp)            
add_executable(helperring3 helperring3.cpp)              
add_executable(helperring3a helperring3a.cpp)              
add_executable(helperring4 helperring4.cpp)             
add_executable(simple_memcpy simple_memcpy.cpp) 
add_executable(builtintest builtintest.cpp) 
#add_executable(esimd_memcpy esimd_memcpy.cpp)
add_executable(queuetest queuetest.cpp) 
add_executable(timertest timertest.cpp) 
add_executable(test_device_lock test_device_lock.cpp) 

set(SRUN srun)
add_test(NAME host_test COMMAND ${SRUN} ./host)
add_test(NAME host_mmap_test COMMAND ${SRUN} ./host_mmap)
add_test(NAME pushpull COMMAND ${SRUN} ./pushpull)
add_test(NAME gpu_cpu_put_flags_lcs_test COMMAND ${SRUN} ./gpu_cpu_put_flags_lcs)
